Updated Discover Probability to account for configurable number of tripwire pages.

--- a/service/init-example.yaml
+++ b/service/init-example.yaml
@@ -82,6 +82,7 @@ public_sites:
         - maintenance
         - tools
         - contact
+    num_tripwire_pages: 1 # Must be < count of pages_menu - 2
 
   - domain: "example2.com"
     db_credentials:
@@ -111,6 +112,7 @@ public_sites:
       - name: "message"
         label: "Inquiry Details"
         help_text: "Briefly describe your requirements (max 1000 chars)."
+    num_tripwire_pages: 1 # Must be < count of pages_menu - 2
 
 ###############################################################################
 # FIELD_TYPE_EXAMPLES (Appendix for reference only)
