Cleanup init.py
- cleanup init.py to print username generation with commas
- add number suffix to usernames
- s/jsonb/bytea
- generate time_dispatched between 2001 and 2020.

--- a/service/init-example.yaml
+++ b/service/init-example.yaml
@@ -48,7 +48,7 @@ secret_door_fields:
     label: "Upload File"
     html_type: "file"
     help_text: "Upload File"
-    pg_type: "JSONB"
+    pg_type: "BYTEA"
     required: false
 
 # global secret_page_fields
