refactor db, init.py to include rw permissions if rw mode

--- a/service/init-example.yaml
+++ b/service/init-example.yaml
@@ -5,7 +5,7 @@ project_meta:
   num_public_sites: 2 
   num_unique_pk_sequences: 20
   num_generated_usernames: 2000
-  mode: "readwrite" # Options: writeonly, readwrite
+  mode: "writeonly" # Options: writeonly, readwrite
 
 # Shared Database Infrastructure (PostgreSQL)
 database_server:
