init.yaml,py: add password_hash_algorithm

--- a/service/init-example.yaml
+++ b/service/init-example.yaml
@@ -20,6 +20,7 @@ application_config:
   pk_max_history: 20 # Note: Must be >= pk_length
   generated_password_length: 8
   generated_password_charset: "0123456789"
+  password_hash_algorithm: "bcrypt" # Options: bcrypt, argon2id, plaintext
 
 # DO NOT EDIT secret_door_fields here. Make changes under each public_site if required.
 secret_door_fields:
