--- a/service/init-example.yaml
+++ b/service/init-example.yaml
@@ -52,8 +52,8 @@ secret_door_fields:
     pg_type: "BYTEA"
     required: false
 
-# global secret_page_fields
-secret_page_fields:
+# global secret_room_fields
+secret_room_fields:
   - name: "primary_email"
     label: "Registration Email"
     html_type: "email"
@@ -77,7 +77,7 @@ public_sites:
       pass: "password" 
     routing_secrets:
         secret_door: "contact"   
-        secret_page: "registration" 
+        secret_room: "registration" 
     pages_menu: #first page is always home
         - home
         - about-us
@@ -95,7 +95,7 @@ public_sites:
       pass: "password"
     routing_secrets: # URL Routing Slugs
         secret_door: "contact"   
-        secret_page: "registration" 
+        secret_room: "registration" 
     pages_menu: #first page is always home
         - home
         - ursa-major
