--- a/service/init-example.yaml
+++ b/service/init-example.yaml
@@ -20,7 +20,7 @@ application_config:
   pk_max_history: 20 # Note: Must be >= pk_length
   password_generated_length: 8
   password_generated_charset: "0123456789"
-  password_hash_algorithm: "bcrypt" # Options: bcrypt, argon2id, plaintext
+  password_hash_algorithm: "PASSWORD_ARGON2ID" # Options: PASSWORD_ARGON2ID, PASSWORD_BCRYPT, PASSWORD_PLAINTEXT
   file_upload_max_size_mb: 1
   username_dispatch: true # Enable automatic username dispatching
   username_allow_custom: false # Allow users to set custom usernames
