--- a/service/init-example.yaml
+++ b/service/init-example.yaml
@@ -5,13 +5,14 @@ project_meta:
   num_public_sites: 2 
   num_unique_pk_sequences: 20
   num_generated_usernames: 2000
-  mode: "writeonly" # Options: writeonly, readwrite
+  mode: "readwrite" # Options: readwrite, readonly
 
 # Shared Database Infrastructure (PostgreSQL)
 database_server:
   host: "127.0.0.1"
   port: 5432
   db_name: "central_management_db"
+  ssl_mode: "disable" # Options: disable, require, verify-ca, verify-full
 
 # Core Application Logic Constants
 application_config:
